--- a/test/test_SM_npointfunctions.cpp.in
+++ b/test/test_SM_npointfunctions.cpp.in
@@ -37,9 +37,12 @@ namespace flexiblesusy
 {
 namespace SM_cxx_diagrams
 {
-@CXXDiagrams_VertexData@
+namespace detail
+{
+@CXXDiagrams_VertexPrototypes@
 
-@CXXDiagrams_Vertices@
+@CXXDiagrams_VertexDefinitions@
+}
 
 namespace npointfunctions
 {
