--- a/templates/cxx_qft/npointfunctions.hpp.in
+++ b/templates/cxx_qft/npointfunctions.hpp.in
@@ -102,6 +102,8 @@ namespace detail
       using field_insertions = typename at_c<InsertionData, 0>::type;
       static constexpr int combinatorial_factor =
         at_c<InsertionData, 1>::type::value;
+      static constexpr auto colour_factor =
+        at_c<InsertionData, 2>::type::value;
       
       using pairs = typename transform<
         GenericKeys,
@@ -115,9 +117,10 @@ namespace detail
         pairs
       >::type;
     
-      value += combinatorial_factor * boost::fusion::fused<
-        boost::value_factory<F<GenericFieldMap>>
-      >{}( state )();
+      value += colour_factor * combinatorial_factor *
+        boost::fusion::fused<
+          boost::value_factory<F<GenericFieldMap>>
+        >{}( state )();
     }
   };
 
@@ -283,6 +286,7 @@ template<
   class GenericFieldKeys,
   class GenericFieldInsertions,
   class CombinatorialFactors,
+  class ColourFactors,
   template<typename> class F,
   class ...Args
 >
@@ -291,7 +295,8 @@ std::complex<double> accumulate_generic( Args &&...args )
   using insertion_data = boost::mpl::zip_view<
     boost::mpl::vector<
       GenericFieldInsertions,
-      CombinatorialFactors
+      CombinatorialFactors,
+      ColourFactors
     >
   >;
 
