--- a/templates/cxx_qft/context_base.hpp.in
+++ b/templates/cxx_qft/context_base.hpp.in
@@ -36,7 +36,7 @@ namespace flexiblesusy
 namespace @ModelName@_cxx_diagrams
 {
    struct context_base {
-      @ModelName@_mass_eigenstates& model; ///< The model object.
+      @ModelName@_mass_eigenstates model; ///< The model object.
 
       template <class Field>
       double mass(const typename field_indices<Field>::type& indices) const
@@ -46,7 +46,7 @@ namespace @ModelName@_cxx_diagrams
          return mass_impl<CleanField>(indices);
       }
 
-      context_base(@ModelName@_mass_eigenstates& m) : model(m) {}
+      context_base(const @ModelName@_mass_eigenstates& m) : model(m) {}
       context_base(const context_base&) = default;
       context_base(context_base&&) = default;
 
