--- a/templates/a_muon.cpp.in
+++ b/templates/a_muon.cpp.in
@@ -416,7 +416,7 @@ PhotonEmitter, ExchangeField
       const auto muonMass = context.mass<Muon>(muonIndices);
 
       const double photonEmitterChargeCount =
-         PhotonEmitter::electric_charge / Muon::electric_charge;
+         - PhotonEmitter::electric_charge / Muon::electric_charge;
 
       const std::complex<double> zL = muonVertex.left();
       const std::complex<double> zR = muonVertex.right();
@@ -474,7 +474,7 @@ PhotonEmitter, ExchangeField
       const auto muonMass = context.mass<Muon>(muonIndices);
 
       const double photonEmitterChargeCount =
-         PhotonEmitter::electric_charge / Muon::electric_charge;
+         - PhotonEmitter::electric_charge / Muon::electric_charge;
 
       const std::complex<double> zL = muonVertex.left();
       const std::complex<double> zR = muonVertex.right();
