refactoring the l->l'A code

--- a/model_files/MRSSM2/FlexibleSUSY.m.in
+++ b/model_files/MRSSM2/FlexibleSUSY.m.in
@@ -97,14 +97,14 @@ InitialGuessAtLowScale = {
 
 ExtraSLHAOutputBlocks = {
    {FlexibleSUSYLowEnergy, {
-      (*{21, FlexibleSUSYObservable`aMuon},*)
-      {23, FlexibleSUSYObservable`EDM[Fe[1]]},
-      {24, FlexibleSUSYObservable`EDM[Fe[2]]},
-      {25, FlexibleSUSYObservable`EDM[Fe[3]]}, 
-      {26, FlexibleSUSYObservable`MuEGamma[Fe[2], Fe[1], VP]}(*,
-      {27, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VP]}, 
-      {28, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VG]},
-      {29, FlexibleSUSYObservable`FToFConversionInNucleus[Fe[2], Fe[1], Au]}*)
+         {21, FlexibleSUSYObservable`aMuon},
+         {23, FlexibleSUSYObservable`EDM[Fe[1]]},
+         {24, FlexibleSUSYObservable`EDM[Fe[2]]},
+         {25, FlexibleSUSYObservable`EDM[Fe[3]]}, 
+         {26, FlexibleSUSYObservable`BrLToLGamma[Fe[2] -> {Fe[1], VP}]},
+         {29, FlexibleSUSYObservable`FToFConversionInNucleus[Fe[2] -> Fe[1], Au]}(*
+         {27, FlexibleSUSYObservable`brMuEGamma[Fd[3], Fd[2], VP]}, 
+         {28, FlexibleSUSYObservable`brMuEGamma[Fd[3], Fd[2], VG]},*)
       } 
    }
 };
