--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -143,10 +143,8 @@ ExtraSLHAOutputBlocks = {
             {23, FlexibleSUSYObservable`EDM[Fe[1]]},
             {24, FlexibleSUSYObservable`EDM[Fe[2]]},
             {25, FlexibleSUSYObservable`EDM[Fe[3]]}, 
-            {26, FlexibleSUSYObservable`MuEGamma[Fe[2], Fe[1], VP]},
-            {27, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VP]}, 
-            {28, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VG]},
-            {29, FlexibleSUSYObservable`FToFConversionInNucleus[Fe[2], Fe[1], Au]}
+            {26, FlexibleSUSYObservable`BrLToLGamma[Fe[2] -> {Fe[1], VP}]},
+            {29, FlexibleSUSYObservable`FToFConversionInNucleus[Fe[2] -> Fe[1], Au]}
            } 
    }
 };
