--- a/templates/mu_to_egamma.hpp.in
+++ b/templates/mu_to_egamma.hpp.in
@@ -38,7 +38,7 @@ namespace @ModelName@_mu_to_egamma {
 template <typename T1, typename T2>
 double lepton_total_decay_width(
       T1 const&, T2 const&, 
-      const MRSSM2_mass_eigenstates&, const softsusy::QedQcd&);
+      const @ModelName@_mass_eigenstates&, const softsusy::QedQcd&);
 @LToLGamma_InterfacePrototypes@
 }
 } // namespace flexiblesusy
