--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -33,6 +33,8 @@
 #include "cxx_qft/@ModelName@_vertices.hpp"
 #include "concatenate.hpp"
 
+#include "wrappers.hpp"
+
 #include "@ModelName@_FFMassiveV_form_factors.hpp"
 
 using namespace flexiblesusy;
