NPointFunctions: support complex colour factors

--- a/templates/cxx_qft/npointfunctions.hpp.in
+++ b/templates/cxx_qft/npointfunctions.hpp.in
@@ -144,6 +144,17 @@ namespace detail
   {
     using type = typename GenericFieldKey::field_vector;
   };
+
+  template<std::intmax_t Num, std::intmax_t Denom = 1> struct ratio_helper
+  {
+    static constexpr double value = double(Num) / double(Denom);
+  };
+  
+  template<class RealPart, class ImPart> struct complex_helper
+  {
+    static constexpr std::complex<double> value {RealPart::value, ImPart::value};
+  };
+
 }
 
 struct lorentz_scalar {};
