reverting other unintentional changes

--- a/model_files/CSE6SSM/FlexibleSUSY.m.in
+++ b/model_files/CSE6SSM/FlexibleSUSY.m.in
@@ -169,11 +169,7 @@ ExtraSLHAOutputBlocks = {
            {{21, FlexibleSUSYObservable`aMuon},
             {23, FlexibleSUSYObservable`EDM[Fe[1]]},
             {24, FlexibleSUSYObservable`EDM[Fe[2]]},
-            {25, FlexibleSUSYObservable`EDM[Fe[3]]}, 
-            {26, FlexibleSUSYObservable`MuEGamma[Fe[2], Fe[1], VP]}, 
-            {27, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VP]}, 
-    (*{28, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VG]},*)
-            {29, FlexibleSUSYObservable`FToFConversionInNucleus[Fe[2], Fe[1], Au]}
+            {25, FlexibleSUSYObservable`EDM[Fe[3]]}
            } 
    },
    {Au,        {{1, 1, T[Yu][1,1] / Yu[1,1]},
