--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -143,8 +143,7 @@ ExtraSLHAOutputBlocks = {
             {23, FlexibleSUSYObservable`EDM[Fe[1]]},
             {24, FlexibleSUSYObservable`EDM[Fe[2]]},
             {25, FlexibleSUSYObservable`EDM[Fe[3]]}, 
-            {26, FlexibleSUSYObservable`BrLToLGamma[Fe[2] -> {Fe[1], VP}]},
-            {29, FlexibleSUSYObservable`FToFConversionInNucleus[Fe[2] -> Fe[1], Au]}
+            {26, FlexibleSUSYObservable`BrLToLGamma[Fe[2] -> {Fe[1], VP}]}
            } 
    }
 };
