removed massive penguins and conversion code

--- a/templates/observables.cpp.in
+++ b/templates/observables.cpp.in
@@ -23,7 +23,7 @@
 #include "@ModelName@_a_muon.hpp"
 #include "@ModelName@_edm.hpp"
 #include "@ModelName@_mu_to_egamma.hpp"
-#include "@ModelName@_f_to_f_conversion.hpp"
+//#include "@ModelName@_f_to_f_conversion.hpp"
 #include "@ModelName@_effective_couplings.hpp"
 #include "config.h"
 #include "eigen_utils.hpp"
