--- a/templates/l_to_lgamma.hpp.in
+++ b/templates/l_to_lgamma.hpp.in
@@ -34,7 +34,7 @@
 namespace flexiblesusy {
 class @ModelName@_mass_eigenstates;
 
-namespace @ModelName@_mu_to_egamma {
+namespace @ModelName@_l_to_lgamma {
 template <typename T1, typename T2>
 double lepton_total_decay_width(
       T1 const&, T2 const&, 
