--- a/templates/observables.cpp.in
+++ b/templates/observables.cpp.in
@@ -22,7 +22,7 @@
 #include "@ModelName@_mass_eigenstates.hpp"
 #include "@ModelName@_a_muon.hpp"
 #include "@ModelName@_edm.hpp"
-#include "@ModelName@_mu_to_egamma.hpp"
+#include "@ModelName@_l_to_lgamma.hpp"
 //#include "@ModelName@_f_to_f_conversion.hpp"
 #include "@ModelName@_effective_couplings.hpp"
 #include "config.h"
