ignore generated test subdirectory

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ test/*.spc
 test/*.spc.*
 test/*.xml
 test/LesHouches.out.*
+test/SM
 test/test_*.callgrind.out*
 test/test_SM_npointfunctions.cpp
 test/test_MSSM_npointfunctions.cpp
