remove hardcode lepton name in l -> l gamma

--- a/templates/l_to_lgamma.cpp.in
+++ b/templates/l_to_lgamma.cpp.in
@@ -44,18 +44,18 @@ using namespace @ModelName@_FFV_form_factors;
 namespace flexiblesusy {
 namespace @ModelName@_l_to_lgamma {
 
-template <typename T1, typename T2>
+template <typename FIn, typename FOut, typename T1, typename T2>
 double lepton_total_decay_width(
       T1 const& indices1, T2 const& indices2, 
       const @ModelName@_mass_eigenstates& model, const softsusy::QedQcd& qedqcd) {
 
    context_base context {model};
 
-   const auto leptonInMass = context.mass<Fe>(indices1);
-   const auto leptonOutMass = context.mass<Fe>(indices2);
+   const auto leptonInMass = context.mass<FIn>(indices1);
+   const auto leptonOutMass = context.mass<FOut>(indices2);
    const auto r = pow(leptonOutMass/leptonInMass, 2);
    const auto GF2 = pow(qedqcd.displayFermiConstant(), 2);
-   const double Alpha = Sqr(Fe::electric_charge * unit_charge(context))/(4*Pi);
+   const double Alpha = Sqr(FIn::electric_charge * unit_charge(context))/(4*Pi);
 
    // eq. 10.6 of http://pdg.lbl.gov/2018/reviews/rpp2018-rev-standard-model.pdf
    return 
